now the unique markers are grouped by description type such as STOLEN VEHICLE and visibility toggled based on active legend symbols. However I noticed new bug with opening and closing the infowindow. appears to not open at the right time

--- a/css/SFcrime.css
+++ b/css/SFcrime.css
@@ -98,6 +98,10 @@ p {
   vertical-align: middle;
 }
 
+#legend>div>div>img:hover{
+  cursor:pointer;
+}
+
 #legend>div>div>h3{
   text-align: center;
 }
